# wechat-dump

./: .gitignore  Cargo.toml  NOTES.md  README.md  build.rs
.gitea/workflows/: rust.yml
.github/workflows/: rust.yml
src/: main.rs  wechat.proto
