[package]
name = "wechat-dump"
version = "0.1.0"
authors = ["Jiajie Chen <c@jia.je>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-async-std-native-tls"] }
async-std = { version = "1.12.0", features = ["attributes"] }
anyhow = "1.0.57"
clap = "3.1.18"
roxmltree = "0.14.1"
chrono = "0.4.24"
indicatif = "0.17.0"
md5 = "0.7.0"
bytes = "1.4.0"
prost = "0.11.8"

[build-dependencies]
prost-build = "0.11.8"
